# content-moderation-services

./: .env.example  .gitignore  .pre-commit-config.yaml  MODERATION_FRONTEND.md  Makefile  README.docker.md  README.logs.md  README.md  docker-compose.kafka.yml  docker-compose.logs.yml  docker-compose.moderation.yml  docker-compose.mongodb.yml  docker-compose.override.yml  docker-compose.tests.yml  docker-compose.yml  init-networks.sh  pyproject.toml  start-all.sh  start-moderation.sh  stop-moderation.sh
.github/workflows/: linters.yml
automated_moderation_service/: Dockerfile  README.md  pyproject.toml
automated_moderation_service/src/: __init__.py  config.py  constants.py  main.py  moderator.py  review_service.py
automated_moderation_service/src/ai_service/: moderation_service.py
automated_moderation_service/src/core/: __init__.py  config.py  constants.py
automated_moderation_service/src/exceptions/: __init__.py  ai_service.py  base.py
automated_moderation_service/src/schemas/: __init__.py  ai.py  review_data.py
automated_moderation_service/src/services/: __init__.py  moderator.py  review_service.py
automated_moderation_service/src/services/ai_service/: __init__.py  config.py  moderation_service.py  repository.py  service.py
configs/: .env.example
configs/nginx/: nginx.conf
configs/nginx/sites/: admin.conf  default.conf  moderation.conf  moderation_standalone.conf
demo/: README.md  demo_page_spec.md  implementation_guide.md  landing_page_spec.md  presentation_plan.md
grpc_services/grpc_client/: moderator_client.py  review_client.py
grpc_services/proto/: moderator.proto  review.proto
logs/grafana/: README.md  custom.ini
logs/grafana/dashboards/: logs-dashboard.json
logs/loki/: loki.yaml
logs/promtail/: promtail.yml
manual_moderation_service/: Dockerfile  django-entrypoint.sh  entrypoint-api-fixed.sh  entrypoint-api.sh  pyproject.toml
manual_moderation_service/src/: grpc_server.py  gunicorn_config.py  main.py  manage.py
manual_moderation_service/src/api/v1/: __init__.py  review.py
manual_moderation_service/src/config/: asgi.py  urls.py  wsgi.py
manual_moderation_service/src/config/settings/: __init__.py
manual_moderation_service/src/config/settings/components/: common.py  database.py  installed_apps.py  loggers.py
manual_moderation_service/src/config/settings/environments/: development.py  production.py
manual_moderation_service/src/core/: config.py
manual_moderation_service/src/db/: db.py
manual_moderation_service/src/db/migrations/: env.py
manual_moderation_service/src/db/migrations/versions/: 001_create_review_d40cc348551a.py
manual_moderation_service/src/models/: __init__.py  review.py
manual_moderation_service/src/moderator/: admin.py  apps.py  models.py
manual_moderation_service/src/moderator/api/: urls.py
manual_moderation_service/src/moderator/locale/ru/LC_MESSAGES/: django.po
manual_moderation_service/src/moderator/migrations/: 0001_initial.py
manual_moderation_service/src/schemas/: pagination.py  review.py
manual_moderation_service/src/services/: jwt_token.py
manual_moderation_service/src/services/repositories/: base.py  review.py
moderation_frontend/: .dockerignore  .front.example  Dockerfile  Dockerfile.dev
moderation_frontend/frontend/: next.config.mjs  package.json
moderation_frontend/frontend/.next/: trace
moderation_frontend/frontend/app/: layout.tsx  page.tsx
moderation_frontend/frontend/components/: ai-moderation.tsx  movie-card.tsx  navbar.tsx  review-form.tsx  review-list.tsx  star-rating.tsx
moderation_frontend/frontend/contexts/: auth-context.tsx  moderation-auth-context.tsx
moderation_frontend/frontend/examples/: error-handling-examples.ts
moderation_frontend/frontend/hooks/: use-safe-api.ts
moderation_frontend/frontend/lib/: api-wrapper.ts  api.ts  circuit-breaker.ts  debug-logger.ts  error-handling.ts  mock-data.ts  moderation-api.ts  token-storage.ts
moderation_frontend/frontend/pages/: _app.tsx
research/: RESEARCH.MD  requirements.txt  research.py
tools/: generate_token.py
tools/gigachat/: GIGACHAT.md  constants.py  errors.py  main.py  r.txt  repository.py  schemas.py  service.py
ugc_api/: Dockerfile  Dockerfile.test  grpc_entrypoint.sh  pyproject.toml
ugc_api/src/: grpc_server.py  main.py
ugc_api/src/api/v1/: __init__.py  bookmark.py  movie.py  reactions.py  review.py
ugc_api/src/core/: config.py
ugc_api/src/db/: mongodb.py
ugc_api/src/documents/: movie.py  review.py
ugc_api/src/schemas/: bookmark.py  kafka.py  movie.py  reaction.py  review.py
ugc_api/src/services/: kafka_producer.py  reactions.py  review_service.py
ugc_api/src/services/repositories/: base.py  bookmarks.py  movies.py  reactions.py  reviews.py
ugc_api/src/tests/: conftest.py  test_api.py  test_bookmarks.py
(+29 files in other folders)
