[project]
name = "automated_moderation_service"
version = "0.1.0"
description = "Automated moderation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.9.0",
    "backoff>=2.2.1",
    "nltk>=3.9.1",
    "orjson>=3.10.15",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "pydantic>=2.4.0",
]
