[project]
name = "manual-moderation-service"
version = "0.1.0"
description = "Manual moderation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-split-settings>=1.3.2",
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "psycopg>=3.2.5",
    "python-dotenv>=1.0.1",
    "django-debug-toolbar>=5.0.1",
    "gunicorn>=23.0.0",
    "gevent>=24.11.1",
    "django-extensions>=3.2.3",
    "psycopg-binary>=3.2.5",
    "django-cors-headers>=4.7.0",
]
