[project]
name = "manual-moderation-service"
version = "0.1.0"
description = "Manual moderation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "orjson>=3.10.15",
    "psycopg>=3.1.18",
    "pydantic-settings>=2.7.1",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy>=2.0.38",
]
